<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Me2There</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_card_list">CardListActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="app_id">426752620815000</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_event_detail">Activity Detail</string>
    <string name="title_activity_create">New Activity</string>
    <string name="activity_title">Title</string>
    <string name="activity_desc">Description</string>
    <string name="activity_location">Select Location</string>
    <string name="upload_picture">Image</string>
    <string name="create_activity">Create</string>
    <string name="no_maps">Google Maps V2 not available!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="pick_location">Location</string>
    <string name="pick_date">Set Date</string>
    <string name="login">enter</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Edit Profile</string>
    <string name="action_search">search</string>
    <string name="create_new">New Actvity</string>
    <string name="search_title">Search Activity1</string>
    <string name="title_activity_activity_search_results">activity_search_results</string>

</resources>
